--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,6 +68,11 @@ dependencies {
 
     testImplementation 'junit:junit:4.12'
 
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+// AndroidJUnitRunner and JUnit Rules
+    androidTestImplementation 'androidx.test:runner:1.2.0'
+    androidTestImplementation 'androidx.test:rules:1.2.0'
+
 
 
 
