--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,17 +15,18 @@ android {
 
     defaultConfig {
         applicationId "com.ismail.mynotes"
-        minSdkVersion 21
+        minSdkVersion 16
         targetSdkVersion 29
-        versionCode 3
-        versionName "1.0"
+        // keep track for app updates
+        versionCode 6
+        versionName "1.2"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
